# oldnyc

./: .gitignore  MultipartPostHandler.py  NOTES  README  README.md  appengine-issues.txt  aws_fetcher.py  blacklist.lat-lons.js  cat-codes.txt  clean_records.py  cluster-locations.py  date-parser.py  date-stats.py  dates.py  dates_test.py  develop.py  devserver.py  extract-sizes.py  fetcher.py  flickrapi-1.4.2-py2.6.egg  front-to-back.json  generalizations.txt  generalized-locations.txt  generate-geocodes.py  generate-js.py  generate_js.py  generate_kml.py  generate_static_site.py  genererate_static_site.py  geocache.tgz  geocode_all.py  geocode_catcodes.py  geocode_pairs.py  geocoder.py  good-cat-codes.txt  howto.md  image-sizes.txt  image_fetcher.py  image_thumbnailer.py  lat-lon-map.txt  (+24 more)
analysis/: analyze_movement.py  dates_from_text.py  dates_from_text_test.py  extreme_dates.py  folders-to-urls.py  folders.py  generalize.py  isitgreat-out.csv  isitgreat.html  ocr-analysis.csv  ocr-analysis.output.csv  ocr-train-round-2.txt  ocr_counts.py  ocr_survey.html  ocr_survey.py  ocr_training_set.py  sf_freestanding_streets.py  sf_residences.py  sf_streets.py  tally-pairs.py  to-csv.py  to-text.py  useless-descriptions.py
catcode/: app.py  app.yaml  folder-counts.txt  lat-lons.js  mainpage.tpl  viewer.html
coders/: cached_coder.py  catcodes.py  diff.py  extended-grid-cases.txt  extended_grid.py  free_streets.py  generalizations.py  gpt.py  locatable.py  milstein.py  nyc-parks.py  nyc_parks.py  registration.py  sf_residences.py  sf_streets.py  types.py
crawl/: README.md  build_extended_records.py  crawl_collections.py  crawl_from_roots.py  find_milstein_collections.py  generate_details_urls.py  generate_mods_urls.py  milsteins.json  nypl_html.py  nypl_html_test.py  print_from_cache.py  roots.json  roots.py
data/: README.md  calculate_metrics.py  collect_mods.py  collect_subjects.py  diff_geojson.py  gpt-geocodes.json  historic-intersections.csv  ingest.py  intersections-osm.csv  intersections.csv  intersections.tsv  item.py  lat-lon-map.txt  lat-lon-to-ids.json  nyc-image-sizes.txt  nyc-intersections.csv  nyc-lat-lons-ny.js  nyc-named-roads.overpass-query.txt  self-hosted-sizes.txt  site-ocr-keep-ids.txt  subjects.geojson  util.py  util_test.py
feedback/: README.md  db_model.py  export_as_csv.py  feedback_to_json.py  firebase_pushid.py  stats.py
geogpt/: extract_gpt_geocodes.py  extract_gpt_geocodes_test.py  generate_batch.py  geocodes.json  review_batch.py  unlocated_sample.py
grid/: coder.py  coder_test.py  extrapolate.py  gold.py  gold_test.py  intersections.json
labeler/: README  app.py  app.yaml  db.py  labeler.py  labeler_db.py  upload.py
locatable_turk/: README.md  fix_truth.py  generate_truth_gtjson.py  (+9 more)
(+343 files in other folders)
